--- a/waybar/style.css
+++ b/waybar/style.css
@@ -31,6 +31,7 @@ window#waybar {
     border: 1px solid #8ab4f8;
 }
 
+#language,
 #clock, 
 #pulseaudio, 
 #network, 
@@ -38,10 +39,16 @@ window#waybar {
 #memory,
 #mpris,
 #custom-weather,
+#battery,
 #tray {
     padding: 0 10px;
     margin: 2px 3px;
     border-radius: 4px;
+}
+
+#language {
+    background-color: #b48ead;
+    color: #1a1b26;
 }
 
 #clock {
@@ -82,6 +89,11 @@ window#waybar {
 
 #battery {
     background-color: #6a9372;
+    color: #1a1b26;
+}
+
+#custom-updates {
+    background-color: #ff9e64;
     color: #1a1b26;
 }
 
