--- a/waybar/style.css
+++ b/waybar/style.css
@@ -39,7 +39,7 @@ window#waybar {
 #memory,
 #mpris,
 #custom-weather,
-#battery,
+#custom-battery,
 #tray {
     padding: 0 10px;
     margin: 2px 3px;
